# ai-sec-agent

./: DISCORD_SETUP.md  LICENSE  OPENAI_SETUP.md  README.md  agent.py  check_env.py  check_pytm.py  cis_controls.csv  discord_bot.py  pyproject.toml  report.md  report_ollama_direct.md  report_with_pytm_final.md  requirements.txt  run_full_report.py  sample.drawio  test_discord_bot.py
